# stm32f401c_start

./: CMakeLists.txt  README.md  openocd.cfg
cmake/: BuildArmBaremetalToolchain.cmake  BuildPackage.cmake  BuildStm32CubeF4.cmake
include/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
src/: main.c  stm32f4xx_it.c
